[project]
name = "credit-default-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "mlflow>=3.13.0",
    "notebook>=7.5.7",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "uvicorn>=0.49.0",
]
